removed schedule column
